# protorpc.cxx

./: CMakeLists.txt  LICENSE  README.md  build-debug-mt.bat  build-debug-proj-mt.bat  clean.bat
linux/: config.h
src/google/protobuf/compiler/: main.cc
src/google/protobuf/compiler/cxx24x/: cxx_bootstrap_unittest.cc  cxx_enum.cc  cxx_enum.h  cxx_enum_field.cc  cxx_enum_field.h  cxx_extension.cc  cxx_extension.h  cxx_field.cc  cxx_field.h  cxx_file.cc  cxx_file.h  cxx_generator.cc  cxx_generator.h  cxx_helpers.cc  cxx_helpers.h  cxx_message.cc  cxx_message.h  cxx_message_field.cc  cxx_message_field.h  cxx_plugin_unittest.cc  cxx_primitive_field.cc  cxx_primitive_field.h  cxx_service.cc  cxx_service.h  cxx_string_field.cc  cxx_string_field.h  cxx_unittest.cc
src/google/protobuf/compiler/cxx25x/: cxx_bootstrap_unittest.cc  cxx_enum.cc  cxx_enum.h  cxx_enum_field.cc  cxx_enum_field.h  cxx_extension.cc  cxx_extension.h  cxx_field.cc  cxx_field.h  cxx_file.cc  cxx_file.h  cxx_generator.cc  cxx_helpers.cc  cxx_helpers.h  cxx_message.cc  cxx_message.h  cxx_message_field.cc  cxx_message_field.h  cxx_options.h  cxx_plugin_unittest.cc  cxx_primitive_field.cc  cxx_primitive_field.h  cxx_service.cc  cxx_service.h  cxx_string_field.cc  cxx_string_field.h  cxx_unittest.cc  cxx_unittest.h
src/google/protobuf/rpc/: rpc_client.cc  rpc_client.h  rpc_conn.cc  rpc_conn.h  rpc_conn_posix.cc  rpc_conn_windows.cc  rpc_crc32.cc  rpc_crc32.h  rpc_env.cc  rpc_env.h  rpc_env_posix.cc  rpc_env_windows.cc  rpc_server.cc  rpc_server.h  rpc_server_conn.cc  rpc_server_conn.h  rpc_service.cc  rpc_service.h  rpc_wire.cc  rpc_wire.h
src/google/protobuf/rpc/wire.pb/: update_pb.bat  wire.pb.cc  wire.pb.h  wire.proto
src/google/protobuf/stubs/: defer.h
src/google/protobuf/xml/: xml_base64.h  xml_message.cc  xml_message.h
tests/rpctest/: rpcclient.cc  rpcclient.go  rpcserver.cc  rpcserver.go  rpctest.cc
tests/rpctest/message.pb/: arith.pb.cc  arith.pb.go  arith.pb.h  echo.pb.cc  echo.pb.go  echo.pb.h  update_pb.bat
tests/rpctest/service.pb/: arith.pb.cc  arith.pb.h  echo.pb.cc  echo.pb.h  update_pb.bat
tests/xmltest/: golden.xml  xmltest.cc
tests/xmltest/xml.pb/: XmlTest.pb.cc  XmlTest.pb.h  XmlTest.proto  update_pb.bat
